Fixed image gallery display on small screen

--- a/www/css/directive-overrides.css
+++ b/www/css/directive-overrides.css
@@ -8,7 +8,7 @@
     /*padding-top: 15px;*/
 }
 
-@media(min-width: 767px) {
+@media(min-width: 768px) {
     .ng-image-gallery.inline .ng-image-gallery-modal {
         height: 400px;
     }
@@ -16,6 +16,20 @@
 
 .ng-image-gallery .ng-image-gallery-modal .ng-image-gallery-content .destroy-icons-container{
     z-index: 1;
+}
+
+@media(max-width: 1199px) {
+
+    .ng-image-gallery .prev,
+    .ng-image-gallery .next {
+        z-index: 1;
+        background-color: rgba(255, 255, 255, 0.69) !important;
+    }
+
+    .ng-image-gallery .ng-image-gallery-modal .ng-image-gallery-content .galleria{
+        left: 0;
+        right: 0;
+    }
 }
 
 .ng-image-gallery.inline .destroy-icons-container,
